change project title

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cosc3p71.ass3</name>
+	<name>neural-network</name>
 	<comment></comment>
 	<projects>
 	</projects>
